[project]
name = "agent"
version = "0.0.1"
description = "Starter template for making a new agent LangGraph."
authors = [
    { name = "Brais Maneiro Sánchez", email = "braisms.dev@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11.8, <3.12.0"
dependencies = [
    "langgraph (>=0.3.5,<0.4.0)",
    "python-dotenv",
    "langchain-openai",
    "pymongo",
    "langgraph-checkpoint-mongodb",
    "certifi",
    "langgraph-cli (>=0.1.75,<0.2.0)",
    "langgraph-api (>=0.0.28,<0.0.29)",
    "trustcall (>=0.0.38,<0.0.39)",
    "langmem (>=0.0.15,<0.0.16)"
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
